# gfluid

./: Cargo.toml  README.md
src/: config.rs  helper.rs  lib.rs  types.rs
src/state/: geometry.rs  mod.rs
src/state/particle/: factory.rs  mod.rs
